[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameElementsRelated/AreaTowerPlacablesRelated/BaseAreaTowerPlacable.gd" type="Script" id=1]

[node name="BaseAreaTowerPlacable" type="Area2D"]
input_pickable = false
collision_layer = 32768
collision_mask = 0
script = ExtResource( 1 )

[node name="TowerCenterLocation" type="Position2D" parent="."]

[node name="AreaShape" type="CollisionShape2D" parent="."]

[node name="AreaSprite" type="Sprite" parent="."]

[node name="TowerHighlightSprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.156863 )
